@@ -15,18 +15,11 @@ public class OfferService {
     private final OfferJPARepository offerJPARepository;
 
     // 04-01 YSH ~
-    // 개인이 보는 제안(공고)들
+    // 개인 제안 목록
     public List<OfferResponse.personOffersDTO> personOffers(int id) {
-        List<Offer> personOfferList = offerJPARepository.personFindAllOffers(id); // 나는 디티오 말고 그냥 엔티티로 뽑은 정보를 요따가 담았다.
-        List<OfferResponse.personOffersDTO> personOffersDTOs = new ArrayList<>(); // 나는 위에서 뽑은 애들을 디티오 리스트에 담을 것이다.
-        personOfferList.stream().map(offer -> {
-            return personOffersDTOs.add(OfferResponse.personOffersDTO.builder()
-                    .offer(offer)
-                    .post(offer.getPost())
-                    .user(offer.getPost().getUser())
-                    .build());
-        }).collect(Collectors.toList());
-        return personOffersDTOs;
+        List<Offer> personOffers = offerJPARepository.companyFindAllOffers(id);
+
+        return personOffers.stream().map(offer -> new OfferResponse.personOffersDTO(offer)).toList();
     }
     // 기업이 보낸 제안(이력서)들
     public List<OfferResponse.companyOffersDTO> companyOffers(int id) {
